# Soccer-Analytics

./: .env.example  .gitignore  2018WC-xG Model - Create a preprocessed Pickle file.ipynb  2018WC-xG Model - Data Exploration.ipynb  2018WC-xG Model - Model selection.ipynb  2018WC-xGModel - Model Application.ipynb  Best Players for each position - avg of top 10 features for that position.ipynb  Best Players for each position - weighted Average.ipynb  FootballEvent_Visualizations.ipynb  README.md  WC2018-PlayerComparision Visualizations.ipynb  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  xG Model-version 1.ipynb
.github/workflows/: ingest.yml  promote.yml  validate.yml
app/: globals.css  layout.tsx  page.tsx
components/: FootballLab.tsx
lib/: analytics.ts
open-data/data/: competitions.json
open-data/data/events/: 69147.json  69245.json
open-data/data/lineups/: 2275026.json  2275029.json  2275033.json  2275038.json  2275041.json  2275061.json  2275070.json  2275072.json  2275080.json  2275083.json  2275088.json  2275099.json  2275104.json  2275107.json  2275108.json  2275122.json  2275127.json  (+27 more)
public/: build-manifest.json
public/data/: football-lab.json  schema.json  snapshot-manifest.json
scripts/: configure-github-secrets.sh  write-build-manifest.mjs
src/football_lab/: __init__.py  cli.py  config.py  metrics.py  models.py  pipeline.py
tests/: test_api_football.py  test_football_data.py  test_metrics.py  test_models.py  test_publication.py  test_understat.py
types/: analytics.ts
web-tests/: analytics.test.mjs
(+6 files in other folders)
