[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-lab"
version = "1.0.0"
description = "Reproducible ingestion and analytics for the Football Lab web application."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2",
  "polars>=1.30,<2",
  "pydantic>=2.11,<3",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<1"]

[project.scripts]
football-lab = "football_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/football_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
